# gh-topicgen

./: .env.example  .gitignore  README.md  pyproject.toml  system_prompt.txt
src/gh_topicgen/: __init__.py  __main__.py  cli.py  config.py  github.py  openai.py
